--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -36,7 +36,7 @@ enums:
       damage-selection:
         description: Library preparation-derived technique that retain only molecules containing damage, and have discarded those without damage.
       other:
-        description: Other type of damage treatment that are further described in other method description terms.
+        description: Other type of damage treatment that are further described in other method description terms. If damage removed, but whether full or partial is known - use this option and describe known information in `experimental_sop` and related terms.
   LibTypeEnum:
     permissible_values:
       amplicon:
@@ -941,7 +941,7 @@ classes:
       - samp_preserv_treatm
       - prev_pubs
       - recovery_date
-      - samp_decontam_pretreat
+      - samp_decont_pretreat
       - latest_chrono_age
       - latest_chrono_sys
       - earliest_chrono_age
@@ -1027,7 +1027,7 @@ classes:
       storage_conditions:
         rank: 20
         slot_group: sample body
-      preserv_treatment:
+      samp_preserv_treatm:
         rank: 21
         slot_group: sample body
       palaeopath_status:
@@ -1036,7 +1036,7 @@ classes:
       prev_pubs:
         rank: 23
         slot_group: sample body
-      host_preservation:
+      host_preserv_state:
         rank: 24
         slot_group: sample body
       neg_cont_status:
@@ -1045,7 +1045,7 @@ classes:
       samp_decont_pretreat:
         rank: 26
         slot_group: nucleic acid source
-      na_extraction_date:
+      nucl_acid_extr_date:
         rank: 27
         slot_group: nucleic acid source
       damage_treatment:
