--- a/.github/workflows/lint-linkml.yaml
+++ b/.github/workflows/lint-linkml.yaml
@@ -24,16 +24,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-
-      # Now we can configure Poetry cache
-      - name: Configure Poetry cache
-        run: poetry config cache-dir ~/.cache/poetry
-
-      # Install dependencies using Makefile
       - name: Install dependencies
-        run: make install
+        run: |
+          python -m pip install --upgrade pip
+          pip install linkml
 
       # Run the LinkML linting command
       - name: Run LinkML Linting
