--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -475,12 +475,15 @@ slots:
     annotations:
       Preferred_unit: year
     description: >-
-      Date of excavation or retrieval from burial or depositional context, if known.
-      In case no exact time is available, the date can be right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
-      If excavations were done during a longer period, report its midpoint at a month or year level.
+      Date of excavation or retrieval from burial or depositional context, if known. If excavations were done during a 
+      longer period, report its midpoint at a month or year level. In case no exact time is available, the date can be 
+      right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 
+      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant. 
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
+      - value: "1972-11"
+      - value: "2001-09-25"
     in_subset:
       - nucleic acid sequence source
     slot_uri: MIXS:9999999916
