update 'lib_strandedness' to required
Updated the field 'lib_strandedness' to required rather than recommended to ensure methodological clarity and transparency.

--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -776,7 +776,7 @@ slots:
     slot_uri: MIXS:999999930 #Not assigned
     multivalued: true
     range: LibStrandEnum #enum value
-    required: false
+    required: true
     recommended: true
   capture_probe_desc:
     annotations:
