--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -588,6 +588,8 @@ slots:
   chrono_age_remarks:
     description: >-
       Notes or comments about the chrono:ChronometricAge.
+      For more detail use `Chronometric Age Protocol` to point to original publication describing method.
+      Useful to specify confidence and/or accuracy of reported date.
     title: Chronometric Age Remarks
     examples:
       - value: "radiocarbon dating, calibrated with OxCal v4.3 with 95% confidence interval"
@@ -598,7 +600,7 @@ slots:
     in_subset:
       - investigation
     slot_uri: MIXS:999999923
-    exact_mappings: chrono:chronometricAgeRemarks
+    close_mappings: chrono:chronometricAgeRemarks
     multivalued: false
     range: string
     required: false
