--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -594,7 +594,7 @@ slots:
     examples:
       - value: "radiocarbon dating, calibrated with OxCal v4.3 with 95% confidence interval"
       - value: "based on proxy dating from other bone samples of stratigraphic layer"
-      - value: "a coin found in the burial was from the 3rd century"
+      - value: "a coin found in the burial was from the 3rd century was found in the mouth of the skeleton"
       - value: "age taken from previous publication Doe et al. 2019"
       - value: "radiocarbon age ID: OxA-12345"
     in_subset:
