--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -241,7 +241,7 @@ slots:
     annotations:
       Expected_value: ontology term; text
     description: >-
-      The geological epoch approximating to the period within which the specimen or sample existed. Where possible use terms from ontologies. This term is for geological timescales. For more precise or anthropogenic defined periods, use `Cultural Era`.
+      The geological epoch approximating to the period within which the specimen or sample existed. Where possible use terms from ontologies. NOTE: This term is for geological timescales. For more precise or anthropogenic defined periods, use `Cultural Era`.
     title: geological epoch
     examples:
       - value: "Pleistocene"
