--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -507,7 +507,10 @@ slots:
       Expected_value: age value corresponding to unit
     description: >-
       The minimum/latest/youngest possible age of a specimen as determined by a dating method.
-      Multiple dates can be reported, but the unit (chronometric reference system - 'latest_chrono_sys') must be the same, e.g. all dates must be cal BP, or all dates must be BCE.
+      If multiple dating measurements available, use the most latest/youngest date to provide
+      widest range of age possibilities.
+      The specific age unit should be specified by the term: latest_chrono_sys.
+      More information on specific dates (e.g. radiocarbon lab codes) can be specified in the term: chrono_age_remarks.
     title: Latest Chronometric Age
     examples:
       - value: "100000"
@@ -516,7 +519,7 @@ slots:
       - nucleic acid sequence source
     slot_uri: MIXS:999999918
     exact_mappings: chrono:latestChronometricAge
-    multivalued: true
+    multivalued: false
     range: integer
     required: true
     recommended: true
@@ -542,7 +545,10 @@ slots:
       Expected_value: age value corresponding to unit
     description: >-
       The maximum/earliest/oldest possible age of a specimen as determined by a dating method.
-      Multiple dates can be reported, but the unit (chronometric reference system - 'earliest_chrono_sys') must be the same, e.g. all dates must be cal BP, or all dates must be BCE.
+      If multiple dating measurements available, use the most earliest/oldest date to provide
+      widest range of age possibilities.
+      The specific age unit should be specified by the term: earliest_chrono_sys.
+      More information on specific dates (e.g. radiocarbon lab codes) can be specified in the term: chrono_age_remarks.
     title: Earliest Chronometric Age
     examples:
       - value: "120000"
