--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -487,7 +487,7 @@ slots:
       Date of excavation or retrieval from burial or depositional context, if known. If excavations were done during a 
       longer period, report its midpoint at a month or year level. In case no exact time is available, the date can be 
       right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 
-      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant. 
+      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
@@ -946,6 +946,33 @@ slots:
       - data
     slot_uri: MIXS:999999933 #Not assigned
     multivalued: false
+    range: string
+    required: false
+    recommended: true
+  stratig_context:
+    annotations:
+      Expected_value: Stratigraphic context of the sample that the sample was retrieved from
+    description: >-
+      Associated excavation stratigraphic contexts that the sample was retrieved from (such as an archaeological or palaeontological excavation).
+      Description(s) or identifier(s) of stratigraphic units or layer names within and relative the site.
+    title: stratigraphic context
+    examples:
+      - value: "Layer 5"
+      - value: "Layer UE"
+      - value: "Horizon IIc, Quadrant 77"
+      - value: "HF_23447_77_410_IIc"
+      - value: "KrSp C2/2011/B5"
+      - value: "US10"
+      - value: "YSL"
+      - value: "Subunit 1"
+      - value: "Black Mousterian (BM)"
+    in_subset:
+      - environment
+    keywords:
+      - identifiers
+      - excavation
+    slot_uri: MIXS:999999934 #Not assigned
+    multivalued: true
     range: string
     required: false
     recommended: true
