--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -487,7 +487,7 @@ slots:
       Date of excavation or retrieval from burial or depositional context, if known. If excavations were done during a 
       longer period, report its midpoint at a month or year level. In case no exact time is available, the date can be 
       right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 
-      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant. 
+      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
@@ -890,6 +890,36 @@ slots:
     range: string
     required: false
     recommended: false
+  site_longitude:
+    description: >-
+      The longitude of original geographical origin of the sample, when sampled outside it's original natural environment.
+      The values should be reported in decimal degrees, limited to 8 decimal points, and in WGS84 system.
+    title: original geographic location (longitude)
+    examples:
+      - value: "6.408977"
+    slot_uri: MIXS:999999934 #Not assigned
+    multivalued: false
+    required: false
+    recommended: false
+    structured_pattern:
+      syntax: "^{lon}$"
+      interpolated: true
+      partial_match: true
+  site_latitude:
+    description: >-
+      The latitude of the original geographical origin of the sample, when sampled outside it's original natural environment.
+      The values should be reported in decimal degrees, limited to 8 decimal points, and in WGS84 system.
+    title: original geographic location (latitude)
+    examples:
+      - value: "50.586825"
+    slot_uri: MIXS:999999934 #Not assigned
+    multivalued: false
+    required: false
+    recommended: false
+    structured_pattern:
+      syntax: "^{lat}$"
+      interpolated: true
+      partial_match: true
   data_filt_applied:
     annotations:
       Expected_value: Whether associated data was filtered
@@ -1011,6 +1041,7 @@ classes:
       - capture_probe_desc
       - mid_config
       - site_name
+      - site_longitude
       - data_filt_applied
       - library_name
       - desc_read_state
@@ -1018,129 +1049,135 @@ classes:
       site_name:
         rank: 1
         slot_group: environment
-      past_env_broad:
+      site_longitude:
         rank: 2
         slot_group: environment
-      past_env_local:
+      site_latitude:
         rank: 3
         slot_group: environment
-      samp_alt_lab_ids:
+      past_env_broad:
         rank: 4
-        slot_group: sample body
-      permit_authority:
+        slot_group: environment
+      past_env_local:
         rank: 5
-        slot_group: sample body
-      permit_id:
+        slot_group: environment
+      samp_alt_lab_ids:
         rank: 6
         slot_group: sample body
-      permit_date:
+      permit_authority:
         rank: 7
         slot_group: sample body
-      permit_scope:
+      permit_id:
         rank: 8
         slot_group: sample body
-      biocultural_label:
+      permit_date:
         rank: 9
         slot_group: sample body
-      earliest_chrono_age:
+      permit_scope:
         rank: 10
         slot_group: sample body
-        recommended: true
-      earliest_chrono_sys:
+      biocultural_label:
         rank: 11
         slot_group: sample body
-        recommended: true
-      latest_chrono_age:
+      earliest_chrono_age:
         rank: 12
         slot_group: sample body
         recommended: true
-      latest_chrono_sys:
+      earliest_chrono_sys:
         rank: 13
         slot_group: sample body
         recommended: true
-      chrono_age_protocol:
+      latest_chrono_age:
         rank: 14
         slot_group: sample body
-      chrono_age_remarks:
+        recommended: true
+      latest_chrono_sys:
         rank: 15
         slot_group: sample body
-      cultural_era:
+        recommended: true
+      chrono_age_protocol:
         rank: 16
         slot_group: sample body
-      geological_epoch:
+      chrono_age_remarks:
         rank: 17
         slot_group: sample body
-      context_retrieval_date:
+      cultural_era:
         rank: 18
         slot_group: sample body
-      storage_conditions:
+      geological_epoch:
         rank: 19
         slot_group: sample body
-      samp_preserv_treatm:
+      context_retrieval_date:
         rank: 20
         slot_group: sample body
-      palaeopath_status:
+      storage_conditions:
         rank: 21
         slot_group: sample body
-      prev_pubs:
+      samp_preserv_treatm:
         rank: 22
         slot_group: sample body
-      host_preserv_state:
+      palaeopath_status:
         rank: 23
         slot_group: sample body
-      neg_cont_status:
+      prev_pubs:
         rank: 24
-        slot_group: nucleic acid source
-      samp_decont_pretreat:
+        slot_group: sample body
+      host_preserv_state:
         rank: 25
-        slot_group: nucleic acid source
-      nucl_acid_extr_date:
+        slot_group: sample body
+      neg_cont_status:
         rank: 26
         slot_group: nucleic acid source
-      damage_treatment:
+      samp_decont_pretreat:
         rank: 27
+        slot_group: nucleic acid source
+      nucl_acid_extr_date:
+        rank: 28
+        slot_group: nucleic acid source
+      damage_treatment:
+        rank: 29
         slot_group: sequencing
         recommended: true
       lib_strandedness:
-        rank: 28
+        rank: 30
         slot_group: sequencing
         recommended: true
       mid_config:
-        rank: 29
+        rank: 31
         slot_group: sequencing
       library_name:
-        rank: 30
+        rank: 32
         slot_group: sequencing
       lib_type:
-        rank: 31
+        rank: 32
         slot_group: sequencing
         recommended: true
       lib_polymerase:
-        rank: 32
-        slot_group: sequencing
-      capture_probe_taxid:
         rank: 33
         slot_group: sequencing
-      capture_probe_desc:
+      capture_probe_taxid:
         rank: 34
         slot_group: sequencing
-      num_capture_cycles:
+      capture_probe_desc:
         rank: 35
         slot_group: sequencing
-      num_reamp_cycles:
+      num_capture_cycles:
         rank: 36
         slot_group: sequencing
-      experimental_sop:
+      num_reamp_cycles:
         rank: 37
         slot_group: sequencing
-      lib_preparation_sop:
+      experimental_sop:
         rank: 38
         slot_group: sequencing
-      data_filt_applied:
+      lib_preparation_sop:
         rank: 39
         slot_group: sequencing
-      desc_read_state:
+      data_filt_applied:
         rank: 40
+        slot_group: sequencing
+      desc_read_state:
+        rank: 41
         slot_group: sequencing
     class_uri: MIXS:9999903
     annotations:
