--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -1169,6 +1169,9 @@ classes:
       desc_read_state:
         rank: 40
         slot_group: sequencing
+      stratig_context:
+        rank: 41
+        slot_group: environment
     class_uri: MIXS:9999903
     annotations:
       use_cases: ancient dna samples
