--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -487,7 +487,7 @@ slots:
       Date of excavation or retrieval from burial or depositional context, if known. If excavations were done during a 
       longer period, report its midpoint at a month or year level. In case no exact time is available, the date can be 
       right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 
-      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant. 
+      2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
@@ -950,6 +950,30 @@ slots:
     range: string
     required: false
     recommended: true
+  site_location:
+    annotations:
+      Expected_value: description of any modifications to data away from original raw files
+    description: >-
+      The original geographical origin of the sample, when sampled outside it's original natural environment, as defined by the country or sea name followed by specific region name. Country or sea names should be chosen from the INSDC country list (http://insdc.org/country.html), or the GAZ ontology (http://purl.bioontology.org/ontology/GAZ).
+    title: site location
+    examples:
+      - value: "South Africa: Wastern Cape, Nelson Bay Cave"
+      - value: "Germany: Baden-Württemberg, Geißenklösterle Cave"
+      - value: "Northern Italy: Lombardy"
+    in_subset:
+      - environment
+    keywords:
+      - location
+      - site
+    slot_uri: MIXS:999999944 #Not assigned
+    multivalued: false
+    range: string
+    required: false
+    recommended: true
+    structured_pattern:
+      syntax: "^{country}: {region}, {specific_location}$"
+      interpolated: true
+      partial_match: true
 classes:
   MixsCompliantData:
     description:
@@ -1015,6 +1039,7 @@ classes:
       - data_filt_applied
       - library_name
       - desc_read_state
+      - site_location
     slot_usage:
       site_name:
         rank: 1
